# tensorflow-project

./: LICENSE  README.md  app.py  mnist.py  notebook.ipynb  pyproject.toml
